new welcome page eg.

--- a/static/src/welcome.tpl.html
+++ b/static/src/welcome.tpl.html
@@ -4,7 +4,7 @@
         <h1>You've installed Unpaywall!</h1>
 
         <p>
-            When you view a research article, check the tab on the right of your screen:
+            When you view a research article, check the tab on the right of your screen.
         </p>
             <ul>
                 <li class="green">
@@ -18,16 +18,18 @@
                     we came up empty.
                 </li>
             </ul>
-        <p>Try this example article to get started:</p>
-        <p class="eg">
-            <a class="eg" href="http://rspa.royalsocietypublishing.org/content/454/1969/277">
-                <i class="fa fa-file-text-o"></i>
-                Information-Theoretic Approach to Quantum Error Correction and Reversible Measurement.
-            </a>
-        </p>
         <p>
-            It's $15 to read from the publisher, but
-            Unpaywall finds a free copy uploaded by the authors to the CERN website.
+            Try this recent Nature article to get started. It describes a newly-discovered solar system, and
+            it'll cost you $32 to read on Nature.com...except now that you've got Unpaywall, it's free!
+
+        </p>
+
+
+        <p class="eg">
+            <a class="eg" target="_blank" href="http://rspa.royalsocietypublishing.org/content/454/1969/277">
+                <i class="fa fa-file-text-o"></i>
+                See the example
+            </a>
         </p>
 
 
