more welcome page tweaks.

--- a/static/src/welcome.tpl.html
+++ b/static/src/welcome.tpl.html
@@ -6,20 +6,21 @@
         <p>
             When you view a research article, check the tab on the right of your screen.
         </p>
-            <ul>
-                <li class="green">
-                    <span class="tab green"><i class="fa fa-unlock-alt"></i></span>
-                    <span class="text green">green tab:</span>
-                    we found free, legal full text. Click it to read!
-                </li>
-                <li class="gray">
-                    <span class="tab gray"><i class="fa fa-lock"></i></span>
-                    <span class="text gray">gray tab:</span>
-                    we came up empty.
-                </li>
-            </ul>
+        <ul>
+            <li class="green">
+                <span class="tab green"><i class="fa fa-unlock-alt"></i></span>
+                <span class="text green">green tab:</span>
+                we found free, legal full text. Click it to read!
+            </li>
+            <li class="gray">
+                <span class="tab gray"><i class="fa fa-lock"></i></span>
+                <span class="text gray">gray tab:</span>
+                we came up empty.
+            </li>
+        </ul>
+        <h2>Let's try an example!</h2>
         <p>
-            Try this recent Nature article to get started. It describes a newly-discovered solar system, and
+             This article describes a newly-discovered solar system, and
             it'll cost you $32 to read on Nature.com...except now that you've got Unpaywall, it's free!
 
         </p>
