adds share buttons to welcome page.

--- a/static/src/welcome.tpl.html
+++ b/static/src/welcome.tpl.html
@@ -1,7 +1,22 @@
 <div class="page welcome">
     <div class="ti-page-header welcome" ng-include="'header.tpl.html'"></div>
     <div class="content">
-        <h1>You've installed Unpaywall!</h1>
+        <div class="top-row">
+            <h1>You've installed Unpaywall!</h1>
+            <div class="spacer"></div>
+            <div class="share">
+                <span class="ti-label">share:</span>
+                <span class="share-icons">
+                    <a target="_blank" class="share-icon" href="mailto:?subject=Neat way to bypasses paywalls on research articles, legally.&amp;body=The Unpaywall browser extension finds free, legal versions of paywalled articles as you browse. http%3A%2F%2Funpaywall.org">
+                        <i class="fa fa-envelope-o"></i>
+                    </a>
+                    <a target="_blank" href="https://twitter.com/intent/tweet?url=http://unpaywall.org&text=The%20new%20%40unpaywall%20extension%20unlocks%20free%2C%20legal%20versions%20of%20paywalled%20research%20papers%20as%20you%20browse.%20%23openaccess">
+                        <i class="fa fa-twitter"></i>
+                    </a>
+                </span>
+            </div>
+            
+        </div>
 
         <p>
             When you view a research article, check the tab on the right of your screen.
