fix sage bug, GS bug for [html].

--- a/static/src/welcome.tpl.html
+++ b/static/src/welcome.tpl.html
@@ -42,7 +42,7 @@
 
 
         <p class="eg">
-            <a class="eg" target="_blank" href="http://rspa.royalsocietypublishing.org/content/454/1969/277">
+            <a class="eg" target="_blank" href="http://www.nature.com/nature/journal/v542/n7642/full/nature21360.html">
                 <i class="fa fa-file-text-o"></i>
                 See the example
             </a>
