urlencode gs urls.

--- a/extension/popup.html
+++ b/extension/popup.html
@@ -27,7 +27,7 @@
 
 <body>
 
-<div id="options" class="opt"><i class="fa fa-cog"></i> Options</div>
+<div id="options" class="opt"><i class="fa fa-cog"></i> Settings</div>
 <div id="homepage" class="opt"><i class="fa fa-question-circle"></i> FAQ</div>
 <div id="example" class="opt"><i class="fa fa-file-text-o"></i> Example</div>
 
