--- a/static/src/faq.tpl.html
+++ b/static/src/faq.tpl.html
@@ -177,7 +177,7 @@
 
                 <dt id="identify-green-or-gold"><i class="fa fa-chevron-right"></i>Can Unpaywall tell me whether an article is "Green" or "Gold" OA?</dt>
                 <dd>Indeed we can. Click the green Unpaywall extension icon in
-                    your browser toolbar and choose "options." Once there, tick "Color-code tab for Green and Gold OA."
+                    your browser toolbar and choose "Settings." Once there, tick "Color-code tab for Green and Gold OA."
                     Thenceforth, you'll enjoy a veritable rainbow of OA colorfully goodness as you browse different articles:
                     <ul>
                         <li>
