new example of green tab in faq.

--- a/static/src/faq.tpl.html
+++ b/static/src/faq.tpl.html
@@ -127,7 +127,7 @@
                                 <span class="color green">Green tab</span> for <a
                                     href="https://en.wikipedia.org/wiki/Self-archiving">Green OA</a> articles on a preprint server or
                                 institutional repository.
-                                <a class="eg" href="http://rspa.royalsocietypublishing.org/content/454/1969/277">(example)</a>
+                                <a class="eg" href="http://jamanetwork.com/journals/jamainternalmedicine/article-abstract/2528290">(example)</a>
                             </div>
                         </li>
                         <li>
