--- a/static/src/landing.tpl.html
+++ b/static/src/landing.tpl.html
@@ -6,18 +6,13 @@
         <div class="main-copy">
             <div class="tagline">
                 <div class="above">
-                    Click the
-                    <span class="tab-word">tab.</span>
-                </div>
-                <div class="under">
-                    Skip the paywall.
+                    Access paywalled research papers, free.
                 </div>
             </div>
             <div class="about">
-                Get full-text
-                of research papers as you browse, using Unpaywall's index of ten million
-                legal, open-access articles.
-
+                Just click the green tab and skip paywalls on millions of
+                articles. It's fast, free, and legal, powered by
+                our database of author-uploaded PDFs.
             </div>
 
             <div class="cta">
