wordsmith landing page copy.

--- a/static/src/landing.tpl.html
+++ b/static/src/landing.tpl.html
@@ -6,13 +6,13 @@
         <div class="main-copy">
             <div class="tagline">
                 <div class="above">
-                    Access paywalled research papers, free.
+                    Read paywalled research papers for free.
                 </div>
             </div>
             <div class="about">
-                Just click the green tab and skip paywalls on millions of
-                articles. It's fast, free, and legal, powered by
-                our database of author-uploaded PDFs.
+                Click the green tab and skip the paywall.
+                It's fast, free, and legal, powered by
+                our database of millions of author-uploaded PDFs.
             </div>
 
             <div class="cta">
