fix typos in faq.

--- a/static/src/faq.tpl.html
+++ b/static/src/faq.tpl.html
@@ -30,10 +30,10 @@
                 <dd>
                     We find fulltext for 65-85% of articles, depending on their topic and year of publication.
                     We think that's a game-changer for
-                    the publishing industry....who will keep subscribing when most articles are free anyway?
+                    the publishing industry. Now that most articles are free, why subscribe?
 
                     Over the longer term, we'll keep
-                    get even better as
+                    getting even better as
                     mandatory open access requirements begin to take effect in the
                     <a href="http://scholcomm.columbia.edu/open-access/public-access-mandates-for-federally-funded-research/">US,</a>
                     <a href="http://www.rcuk.ac.uk/research/openaccess/">UK,</a>
