--- a/static/src/welcome.tpl.html
+++ b/static/src/welcome.tpl.html
@@ -1,52 +1,26 @@
 <div class="page welcome">
     <div class="ti-page-header welcome" ng-include="'header.tpl.html'"></div>
     <div class="content">
-        <div class="top-row">
-            <h1>You've installed Unpaywall!</h1>
-            <div class="spacer"></div>
-            <div class="share">
-                <span class="ti-label">share:</span>
-                <span class="share-icons">
-                    <a target="_blank" class="share-icon" href="mailto:?subject=Neat way to bypasses paywalls on research articles, legally.&amp;body=The Unpaywall browser extension finds free, legal versions of paywalled articles as you browse. http%3A%2F%2Funpaywall.org">
-                        <i class="fa fa-envelope-o"></i>
-                    </a>
-                    <a target="_blank" href="https://twitter.com/intent/tweet?url=http://unpaywall.org&text=The%20new%20%40unpaywall%20extension%20unlocks%20free%2C%20legal%20versions%20of%20paywalled%20research%20papers%20as%20you%20browse.%20%23openaccess">
-                        <i class="fa fa-twitter"></i>
-                    </a>
-                </span>
-            </div>
-            
-        </div>
 
+        <img id="screenshot" src="static/img/laptop-screenshot.png" alt="">
         <p>
-            When you view a research article, check the tab on the right of your screen.
+            Welcome to Unpaywall! When you see the green tab on a research article,
+            click it to read for free. Try this example:
         </p>
-        <ul>
-            <li class="green">
-                <span class="tab green"><i class="fa fa-unlock-alt"></i></span>
-                <span class="text green">green tab:</span>
-                we found free, legal full text. Click it to read!
-            </li>
-            <li class="gray">
-                <span class="tab gray"><i class="fa fa-lock"></i></span>
-                <span class="text gray">gray tab:</span>
-                we came up empty.
-            </li>
-        </ul>
-        <h2>Let's try an example!</h2>
-        <p>
-             This article describes a newly-discovered solar system, and
-            it'll cost you $32 to read on Nature.com...except now that you've got Unpaywall, it's free!
-
-        </p>
-
-
         <p class="eg">
             <a class="eg" target="_blank" href="http://www.nature.com/nature/journal/v542/n7642/full/nature21360.html">
                 <i class="fa fa-file-text-o"></i>
-                See the example
+                See Unpaywall in action
             </a>
         </p>
+        <p>
+            That example will cost you $32 to read on Nature.com...except now that
+            you've got Unpaywall, it's free! You'll see our green tab on 65-85% of articles
+            (if we can't find fulltext, you'll see a gray tab). Happy reading!
+
+        </p>
+
+
 
 
         <p class="ps">
