--- a/extension/popup.html
+++ b/extension/popup.html
@@ -27,9 +27,9 @@
 
 <body>
 
+<div id="example" class="opt"><i class="fa fa-file-text-o"></i> Instructions</div>
 <div id="options" class="opt"><i class="fa fa-cog"></i> Settings</div>
 <div id="homepage" class="opt"><i class="fa fa-question-circle"></i> FAQ</div>
-<div id="example" class="opt"><i class="fa fa-file-text-o"></i> Example</div>
 
   <script src="popup.js"></script>
 </body>
