--- a/static/src/welcome.tpl.html
+++ b/static/src/welcome.tpl.html
@@ -4,19 +4,28 @@
 
         <img id="screenshot" src="static/img/laptop-screenshot.png" alt="">
         <p>
-            Welcome to Unpaywall! When you see the green tab on a research article,
-            click it to read for free. Try this example:
+            Welcome to Unpaywall! When you see the
+            <span class="tab-color green">green tab</span>
+            beside a research article,
+            click it to read the full text. Try this example:
         </p>
         <p class="eg">
             <a class="eg" target="_blank" href="http://www.nature.com/nature/journal/v542/n7642/full/nature21360.html">
                 <i class="fa fa-file-text-o"></i>
-                See Unpaywall in action
+                Try it now
             </a>
         </p>
         <p>
-            That example will cost you $32 to read on Nature.com...except now that
-            you've got Unpaywall, it's free! You'll see our green tab on 65-85% of articles
-            (if we can't find fulltext, you'll see a gray tab). Happy reading!
+            <!--
+            That article will cost you $32 to read on Nature.com...except now that
+            you've got Unpaywall, it's free!
+            -->
+
+            You'll see our green tab on 65-85% of articles
+            (if we can't find fulltext, you'll see a
+            <span class="tab-color gray">gray tab</span>
+
+            ). Happy reading!
 
         </p>
 
