add install link to header.

--- a/static/src/header.tpl.html
+++ b/static/src/header.tpl.html
@@ -10,6 +10,10 @@
     -->
 
     <div class="links">
+        <a href="/" class="install" hide show--gt-xs>
+            <i class="fa fa-plus-circle"></i>
+            Install
+        </a>
         <a href="/faq">
             <i class="fa fa-question-circle"></i>
             FAQ
