email reminder from landing page.

--- a/static/src/landing.tpl.html
+++ b/static/src/landing.tpl.html
@@ -18,7 +18,10 @@
             <div class="cta">
 
                 <div class="button-info" ng-show="browser=='unsupported'">
-                    Requires Firefox or Chrome for desktop.
+                    Unpaywall works with Firefox or Chrome on
+                    your desktop computer.
+                    Click below to send yourself a reminder to install
+                    Unpaywall later:
                 </div>
 
                 <div class="button-info" ng-show="browser != 'unsupported'">
@@ -36,8 +39,8 @@
                         <span class="small">on the Firefox web store</span>
                     </span>
                     <span class="fallback" ng-show="browser=='unsupported'">
-                        <i class="fa fa-twitter"></i>
-                        Tweet it now
+                        <i class="fa fa-envelope-o"></i>
+                        Send myself a reminder
                     </span>
                 </div>
             </div>
