--- a/extension/options.html
+++ b/extension/options.html
@@ -37,13 +37,14 @@
 <div class="option">
     <label>
         <input type="checkbox" id="show-oa-color">
-        Color-code tab for Green and Gold OA
+        OA Nerd Mode
     </label>
     <p>
-        See a <span class="green">green tab</span> when we find fulltext from an institutional repository or preprint
-        server, and a <span class="gold">gold tab</span> when we find journal-hosted content with an
-        Open license. When we find journal-hosted fulltext with no license you'll get
-        a <span class="blue">blue tab</span>.
+        Color-code the unlock tab to show whether fulltext is
+        <a class="green" href="https://en.wikipedia.org/wiki/Open_access#Self-archiving:_green_open_access">Green,</a>
+        <a href="https://en.wikipedia.org/wiki/Open_access#Journals:_gold_open_access" class="gold">Gold,</a>
+        or <a class="blue" href="https://en.wikipedia.org/wiki/Hybrid_open_access_journal">hybrid</a> open access, and
+        see expanded debug info. <a href="https://www.youtube.com/watch?v=_Y3vCpJ_dnQ">(learn more about OA colors)</a>
     </p>
 </div>
 <div class="option">
@@ -52,8 +53,8 @@
         Hide content from less trusted sources
     </label>
     <p>
-        You won't see fulltext from ResearchGate, Academia.edu,
-        researcher homepages, and some IRs. This option decreases coverage by about 20%.
+        You won't see fulltext from places like ResearchGate and
+        researcher homepages. This option decreases coverage by about 20%.
     </p>
 </div>
 
