replace blue with bronze.

--- a/extension/unpaywall.html
+++ b/extension/unpaywall.html
@@ -46,8 +46,8 @@
         .button.green {
             background: #20e168;
         }
-        .button.blue {
-            background: dodgerblue;
+        .button.bronze {
+            background: #cd7f32;
         }
         .button.gold {
             background: #f9bc01;
