--- a/static/src/faq.tpl.html
+++ b/static/src/faq.tpl.html
@@ -108,9 +108,8 @@
                         <li>
                             <div class="text">
                                 <span class="color gold">Gold tab</span> for <a
-                                    href="https://en.wikipedia.org/wiki/Open_access#Journals:_gold_open_access">Gold OA,</a>
-                                articles available from the publisher
-                                under an open license.
+                                    href="https://en.wikipedia.org/wiki/Open_access#Journals:_gold_open_access">Gold OA</a>
+                                articles available from a fully OA journal.
                                 <a class="eg" href="http://journals.plos.org/plosone/article?id=10.1371/journal.pone.0000308">(example)</a>
                             </div>
                         </li>
@@ -119,19 +118,22 @@
                                 <span class="color green">Green tab</span> for <a
                                     href="https://en.wikipedia.org/wiki/Self-archiving">Green OA</a> articles on a preprint server or
                                 institutional repository.
-                                <a class="eg" href="http://jamanetwork.com/journals/jamainternalmedicine/article-abstract/2528290">(example)</a>
+                                <a class="eg" href="https://www.nature.com/nature/journal/v542/n7642/full/nature21360.html">(example)</a>
                             </div>
                         </li>
                         <li>
                             <div class="text">
-                                <span class="color blue">Blue tab</span> for articles available on the current page, but lacking
-                                license information (often that's because you're browsing from behind the paywall).
+                                <span class="color bronze">Bronze tab</span> for <a
+                                    href="https://peerj.com/preprints/3119v1/">Bronze OA</a> articles free to read on the current page, but
+                                published in a toll-access journal.
                                 <a class="eg" href="http://www.pnas.org/content/105/31/11014">(example)</a>
 
                             </div>
                         </li>
                     </ul>
                 </dd>
+
+
 
 
 
