--- a/extension/options.html
+++ b/extension/options.html
@@ -25,7 +25,7 @@
         }
         .green {color: #20e168; }
         .gold {color: #f9bc01;}
-        .blue {color: dodgerblue;}
+        .bronze {color: #cd7f32;}
         label {
             font-size: 120%;
         }
@@ -43,7 +43,7 @@
         Color-code the unlock tab to show whether fulltext is
         <a class="green" href="https://en.wikipedia.org/wiki/Open_access#Self-archiving:_green_open_access">Green,</a>
         <a href="https://en.wikipedia.org/wiki/Open_access#Journals:_gold_open_access" class="gold">Gold,</a>
-        or <a class="blue" href="https://en.wikipedia.org/wiki/Hybrid_open_access_journal">hybrid</a> open access, and
+        or <a class="bronze" href="10.7287/peerj.preprints.3119v1">Bronze</a> open access, and
         see expanded debug info. <a href="https://www.youtube.com/watch?v=_Y3vCpJ_dnQ">(learn more about OA colors)</a>
     </p>
 </div>
