--- a/extension/options.html
+++ b/extension/options.html
@@ -44,17 +44,7 @@
         <a class="green" href="https://en.wikipedia.org/wiki/Open_access#Self-archiving:_green_open_access">Green,</a>
         <a href="https://en.wikipedia.org/wiki/Open_access#Journals:_gold_open_access" class="gold">Gold,</a>
         or <a class="bronze" href="10.7287/peerj.preprints.3119v1">Bronze</a> open access, and
-        see expanded debug info. <a href="https://www.youtube.com/watch?v=_Y3vCpJ_dnQ">(learn more about OA colors)</a>
-    </p>
-</div>
-<div class="option">
-    <label>
-        <input type="checkbox" id="best-practice-repos-only">
-        Hide content from less trusted sources
-    </label>
-    <p>
-        You won't see fulltext from places like ResearchGate and
-        researcher homepages. This option decreases coverage by about 20%.
+        see expanded debug info. <a href="https://peerj.com/preprints/3119v1/">(learn more about OA colors)</a>
     </p>
 </div>
 
