update welcome page.

--- a/static/src/welcome.tpl.html
+++ b/static/src/welcome.tpl.html
@@ -21,7 +21,7 @@
             you've got Unpaywall, it's free!
             -->
 
-            You'll see our green tab on 65-85% of articles
+            You'll see our green tab on about half of articles
             (if we can't find fulltext, you'll see a
             <span class="tab-color gray">gray tab</span>
 
@@ -35,6 +35,10 @@
         <p class="ps">
             PS for the Open Access nerds: the Unpaywall tab
             can change colors to indicate Green or Gold OA, too. Enable it in settings.
+            You might also enjoy
+            <a href="https://peerj.com/preprints/3119v1/">our recent paper</a>
+            analyzing trends in OA and the coverage
+            of Unpaywall.
         </p>
 
 
