--- a/static/src/footer.tpl.html
+++ b/static/src/footer.tpl.html
@@ -4,15 +4,12 @@
         <div class="links" flex="40" flex-xs="100">
             <a href="mailto:team@impactstory.org">
                 <i class="fa fa-envelope-o"></i>
-                Email
             </a>
             <a href="http://twitter.com/unpaywall">
                 <i class="fa fa-twitter"></i>
-                Twitter
             </a>
             <a href="https://github.com/Impactstory/unpaywall">
                 <i class="fa fa-github"></i>
-                GitHub
             </a>
         </div>
 
@@ -28,13 +25,13 @@
 
 
 
-        <div class="credit" flex="40" flex-xs="100">
+        <div class="credit" flex="60" flex-xs="100">
             <span class="built-by">
-                Built with <i class="fa fa-heart"></i> at
+                Built with <i class="fa fa-heart-o"></i> at
                 <a href="faq#who-is-behind-this">Impactstory</a>, with support from
             </span>
             <span class="funders">
-                 the National Science Foundation and the Alfred P. Sloan Foundation
+                 the National Science Foundation and the Alfred P. Sloan Foundation.
             </span>
         </div>
     </div>
