--- a/static/src/header.tpl.html
+++ b/static/src/header.tpl.html
@@ -1,6 +1,6 @@
 <div class="navbar">
     <a href="/">
-        <img id="logo" src="static/img/logo.png" alt="">
+        <img id="site-logo" src="static/img/logo-green.png" alt="">
     </a>
     <div class="spacer"></div>
 
