--- a/static/src/landing.tpl.html
+++ b/static/src/landing.tpl.html
@@ -9,12 +9,12 @@
             <div class="main-copy">
                 <div class="tagline">
                     <div class="above">
-                        Read paywalled research papers for free.
+                        Read research papers for free.
                     </div>
                 </div>
                 <div class="about">
                     <p>
-                        Click the green tab and skip the paywall.
+                        Click the green tab and skip the paywall on millions of peer-reviewed journal articles.
                         It's fast, free, and legal.
                     </p>
                     <p class="button-info" ng-show="browser=='unsupported'">
@@ -52,7 +52,7 @@
                     </div>
                     <div class="num-users">
                         <span class="num">
-                            108,466
+                            116,492
                         </span>
                         <span class="light">users on Chrome and Firefox have read millions of articles for free.</span>
                     </div>
@@ -74,10 +74,10 @@
     <div class="social-proof">
         <div class="quote">
             <div class="content">
-                "Stop beating your head against the paywall."
+                "Must-have for anyone who wants access to the research literature."
             </div>
             <div class="attribution">
-                 &mdash;Adam Ruben, <em>Science</em>
+                 &mdash;Andrew Treloar, <em>Australian National Data Service</em>
             </div>
         </div>
         
@@ -90,6 +90,73 @@
         </div>
         
     </div>
+
+
+    <div class="benefit legal">
+        <img src="static/img/seal-check.png" class="illustration" alt="">
+        <div class="copy">
+            <h2>Legal, fair, and sustainable</h2>
+            <p>
+                Millions of research papers are available for free on government and university web servers, legally  uploaded by the authors themselves, with the express permission of publishers. Often authors are legally <em>required</em> to make government-funded research freely-accessible. Unpaywall automatically harvests these freely shared papers from thousands of legal institutional repositories, preprint servers, and publishers, making them all availabe to you as you read.
+            </p>
+        </div>
+    </div>
+
+
+    <div class="benefit effective">
+        <div class="copy">
+            <h2>Access millions of research articles, instantly</h2>
+            <p>
+                Unpaywall users are able to read over <strong>52%</strong> of research papers for free--without having to pay money, fuss with a VPN, or use pirate sites like Sci-Hub. That's because we're built on a database of millions of open-access articles harvested from thousands of servers worldwide.   When you browse to a paywalled paper, we check to see if we have a free copy. If we do, you'll see a green tab...just click, and read.
+            </p>
+
+        </div>
+        <img src="static/img/many-articles.png" class="illustration" alt="">
+    </div>
+
+
+    <div class="testimonials-section">
+        <div class="testimonials-header">
+            <h2>What people are saying about Unpaywall:</h2>
+        </div>
+        <div class="testimonials">
+            <div class="testimonial">
+                <img src="static/img/tom.jpg" alt="">
+                <div class="copy">
+                    Yesterday I found Unpaywall, and my life changed.  I've already gotten 4 publications by clicking on the Mystical Green Padlock...Thank you, from the heart.
+                    <div class="attribution">
+                        <div class="name">&mdash;Tom Mueller,</div>
+                        <div class="job">Freelance Author</div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="testimonial">
+                <img src="static/img/jon.jpg" alt="">
+                <div class="copy">
+                    Way, way, WAY easier than having to be at a place with institutional access, using a VPN, emailing authors, using inter-library loan...
+                    <div class="attribution">
+                        <div class="name">&mdash;Jon Tennant,</div>
+                        <div class="job">Paleontologist</div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="testimonial">
+                <img src="static/img/stacy.jpg" alt="">
+                <div class="copy">
+                    Unpaywall makes it really easy to (legally!) find free versions of journal articles.
+                    <div class="attribution">
+                        <div class="name">&mdash;Stacy Konkiel,</div>
+                        <div class="job">Altmetric</div>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+
+    </div>
+
 
 
 
