--- a/static/src/landing.tpl.html
+++ b/static/src/landing.tpl.html
@@ -97,7 +97,7 @@
         <div class="copy">
             <h2>Legal, fair, and sustainable</h2>
             <p>
-                Millions of research papers are available for free on government and university web servers, legally  uploaded by the authors themselves, with the express permission of publishers. Often authors are legally <em>required</em> to make government-funded research freely-accessible. Unpaywall automatically harvests these freely shared papers from thousands of legal institutional repositories, preprint servers, and publishers, making them all availabe to you as you read.
+                Millions of research papers are available for free on government and university web servers, legally  uploaded by the authors themselves, with the express permission of publishers. Unpaywall automatically harvests these freely shared papers from thousands of legal institutional repositories, preprint servers, and publishers, making them all availabe to you as you read.
             </p>
         </div>
     </div>
