NB about only repos.

--- a/static/src/repositories.tpl.html
+++ b/static/src/repositories.tpl.html
@@ -11,11 +11,12 @@
 
         <div class="header">
             <p>
-                Repositories are an important source of data for Unpaywall. Here's a list
-                of all the open repositories we harvest. There
-                are also a few OA <em>journals</em> on this list, cases where the journals
-                have implemented an OAI-PMH endpoint for harvesting.
+                Here's a list of the open repositories we harvest. Note that
+                it includes <em>only</em> repositories, not OA journals as well
+                (we've harvest several thousand of those,
+                and they'll have a separate list here soon).
             </p>
+
             <p>
                 If your repository isn't on this list, we'd love to add it! You can submit
                 your repository for indexing via
